# overengineered-todo-rust

./: .env.example  LICENSE.md  README.md  docker-compose.yml
api-gateway/: Cargo.toml  Dockerfile
api-gateway/src/: db.rs  handlers.rs  main.rs  mq.rs
migrations/: 20250527171156_create_tables.sql
todo-processor/: Cargo.toml  Dockerfile
todo-processor/src/: db.rs  jobs.rs  main.rs
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.tsx  store.ts
