[package]
name = "todo-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15.0"
lapin = { version = "2.5.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres","runtime-tokio-native-tls","uuid"] }
uuid = { version = "1.17.0", features = ["v4","serde"] }
anyhow = "1"
futures-util = "0.3"
